--- a/styles/components/_animation_variables.scss
+++ b/styles/components/_animation_variables.scss
@@ -1,12 +1,32 @@
 $ocean2-animation-movement-top: 87%;
 $ocean2-animation-movement-top--down:88%;
 
-$balloon2-animation-movement-bottom: 50%;
-$balloon2-animation-movement-bottom--up:59%;
+// --------------------------------------
 
-$balloon-animation-assembly-delay: 5.5s;
+$balloon2-animation-assembly-bottom: 50%;
+$balloon2-animation-assembly-bottom--up:59%;
 
+$balloon2-animation-movement-top:18%;
+$balloon2-animation-movement-top--up: 17.8%;
+$balloon2-animation-movement-right:12%;
+$balloon2-animation-movement-right--final:3%;
 
 $balloon2-animation-assembly-delay: 5.7s;
 $balloon2-animation-movement-delay: 6.7s;
+
+// --------------------------------------
+
+$balloon-animation-assembly-bottom: 40%;
+$balloon-animation-assembly-bottom--up:48%;
+
+
+$balloon-animation-assembly-delay: 5.3s;
+$balloon-animation-movement-delay: 6.7s;
+
+
+
+
+
+
+
 
