--- a/styles/components/_animation_variables.scss
+++ b/styles/components/_animation_variables.scss
@@ -23,6 +23,8 @@ $balloon-animation-assembly-bottom--up:48%;
 $balloon-animation-assembly-delay: 5.3s;
 $balloon-animation-movement-delay: 6.7s;
 
+$greetingsText-timeFadeIn: 4.3s;
+$nameText-timeFadeIn: 4.33s;
 
 
 
